  * Add the caches of the following applications to the example
    unburden-home-dir.list: Galeon, Epiphany, xxxterm, Battle for Wesnoth,
    Gaia, Adobe Acrobat, Java, Forg, Buzzbird
  * Update list of caches in the example unburden-home-dir.list for the
    following applications: Opera, Mozilla based browsers
  * Comment the example unburden-home-dir.list, group entries by category

 -- Axel Beckert <abe@debian.org>  Sat, 05 May 2012 13:48:49 +0200

unburden-home-dir (0.1) unstable; urgency=low

  * First release thought for production use. Upload to unstable.
  * Uses consistently the basename "unburden-home-dir" instead of
    "unburden_home_dir".
    + Add Pre-Depends on dpkg >= 1.15.7.2 for usage of
      dpkg-maintscript-helper to rename conffiles.
  * Let Xsession.d snippet also source ~/.unburden-home-dir to allow per
    User execution
    + Call unburden-home-dir without hardcoded path
  * Refactoring:
    + Use speaking variable names in fix_dangling_links() and do_it()
    + Reindent and reformat some overlong lines in bin/unburden-home-dir
    + Add semicolons on all return statements before block ends
    + Define list file suffix just once
  * Add further tests to the test suite
  * Improve README and man page
  * Add tmpreaper, eatmydata, agedu, bleachbit and some more comfortable
    "du"-like tools to "Suggests".
  * Remove corekeeper from Suggests but keep it in the man page's SEE ALSO
    section.
  * Update man page
    + Split EXAMPLES and SEE ALSO
    + Update SEE ALSO
    + Typeset em dash properly
  * Add a further use case to the long description and README. (Thanks
    Pietro Abate!) Rewrite parts of the use cases section in both files.
  * Bump Standards-Version to 3.9.3 (no changes)
  * Make Xsession.d snippet POSIX-compatible (Thanks Carsten Hey!)
  * Fix lintian warning helper-templates-in-copyright
  * Update copyright years in debian/copyright
  * Fix indentation in Xsession.d snippet and debian/copyright
